Adjusting various carousel settings, styles and formats. Playing with how to fix the hamburger menu items not collapsing on click.

--- a/public_html/styles/style.css
+++ b/public_html/styles/style.css
@@ -82,7 +82,7 @@ a {
 }
 
 .second-carousel-background {
-	background: url(../images/canyon.jpg) no-repeat center center /cover;
+	background: linear-gradient(rgba(0, 119, 191, 0.75),rgba(0, 119, 191, 0.5)), url(../images/canyon.jpg) no-repeat center center /cover;
 	height: 40rem;
 	display: flex;
 }
